<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp">

    <ImageView
        android:id="@+id/onBoardImage"
        android:layout_width="379dp"
        android:layout_height="283dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/onboard_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        app:layout_constraintBaseline_toBottomOf="@id/onBoardImage">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/embark"
            android:textSize="40sp"
            android:textFontWeight="700"/>
        <TextView
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on_your"
            android:textSize="35sp"
            android:textFontWeight="400"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        app:layout_constraintBaseline_toBottomOf="@id/onBoardImage">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/world"
            android:textSize="35sp"
            android:textFontWeight="700"/>
        <TextView
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adventure"
            android:textSize="40sp"
            android:textFontWeight="400"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        app:layout_constraintBaseline_toBottomOf="@id/onBoardImage">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discover"
            android:textSize="40sp"
            android:textFontWeight="700"/>
        <TextView
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/explore"
            android:textSize="35sp"
            android:textFontWeight="400"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBaseline_toBottomOf="@id/onBoardImage">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unwind"
            android:textSize="40sp"
            android:textFontWeight="400"/>
    </LinearLayout>

    <Button
        android:id="@+id/exploreBtn"
        android:layout_marginTop="62dp"
        android:layout_marginBottom="141dp"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:background="@drawable/rounded_btn"
        android:backgroundTint="@color/default_color"
        android:text="@string/explore_btn"
        android:textSize="20sp"/>


</LinearLayout>