<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/default_color"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/toolbar_title"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/destination"
                android:textColor="@android:color/white" />
        </com.google.android.material.appbar.MaterialToolbar>


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="336dp"
            android:layout_height="168dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/angkorwat"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="38dp"
            tools:layout_editor_absoluteY="77dp" />


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="105dp"
            android:layout_height="64dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/gallery"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="52dp"
            tools:layout_editor_absoluteY="549dp" />

        <View
            android:id="@+id/rectangle_1"
            android:layout_width="334dp"
            android:layout_height="168dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/gradient_carousel"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="38dp"
            tools:layout_editor_absoluteY="77dp" />

        <TextView
            android:id="@+id/visit_angko"
            android:layout_width="129.78dp"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="top"
            android:text="@string/visit_angko"
            android:textAppearance="@style/visit_angko"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="67dp"
            tools:layout_editor_absoluteY="118dp" />

        <View
            android:id="@+id/ellipse_211"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:alpha="0.15"
            android:background="#1BA169"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="181dp"
            tools:layout_editor_absoluteY="256dp" />

        <View
            android:id="@+id/ellipse_3"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:alpha="0.15"
            android:background="#1BA169"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="227dp"
            tools:layout_editor_absoluteY="256dp" />

        <View
            android:id="@+id/ellipse_"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:alpha="0.15"
            android:background="#1BA169"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="168dp"
            tools:layout_editor_absoluteY="256dp" />

        <View
            android:id="@+id/ellipse_213"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:background="#1BA169"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="196dp"
            tools:layout_editor_absoluteY="256dp" />

        <View
            android:id="@+id/ellipse_2"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:alpha="0.15"
            android:background="#1BA169"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="211dp"
            tools:layout_editor_absoluteY="256dp" />

        <TextView
            android:id="@+id/angkor_wat_"
            android:layout_width="151dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="top"
            android:text="@string/angkor_wat_"
            android:textAppearance="@style/angkor_wat_"
            tools:layout_editor_absoluteX="53dp"
            tools:layout_editor_absoluteY="275dp" />

        <TextView
            android:id="@+id/angkor_wat_2"
            android:layout_width="151dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="top"
            android:text="About"
            android:textAppearance="@style/angkor_wat_"
            tools:layout_editor_absoluteX="52dp"
            tools:layout_editor_absoluteY="337dp" />

        <TextView
            android:id="@+id/angkor_wat_3"
            android:layout_width="151dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="top"
            android:text="Gallery"
            android:textAppearance="@style/angkor_wat_"
            tools:layout_editor_absoluteX="52dp"
            tools:layout_editor_absoluteY="517dp" />

        <TextView
            android:id="@+id/siem_reap_c"
            android:layout_width="128dp"
            android:layout_height="15dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="top"
            android:text="@string/siem_reap_c"
            android:textAppearance="@style/siem_reap_c"
            tools:layout_editor_absoluteX="68dp"
            tools:layout_editor_absoluteY="306dp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_location_detail"
            tools:layout_editor_absoluteX="52dp"
            tools:layout_editor_absoluteY="306dp" />

        <TextView
            android:id="@+id/the_archite"
            android:layout_width="315dp"
            android:layout_height="108dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="top"
            android:lineSpacingExtra="3sp"
            android:text="@string/the_archite"
            android:textAppearance="@style/the_archite"
            android:translationY="-1.44sp"
            tools:layout_editor_absoluteX="53dp"
            tools:layout_editor_absoluteY="375dp" />

        <View
            android:id="@+id/some_id"
            android:layout_width="105dp"
            android:layout_height="62dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/some_id"
            tools:layout_editor_absoluteX="52dp"
            tools:layout_editor_absoluteY="549dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
